US103/prod/k8s/Applications/Mealie/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  namespace: mealie-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: mealie.infutable.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie-svc
            port:
              number: 9000
